--- a/src/REstate.Service.AdminUI/wwwroot/package.json
+++ b/src/REstate.Service.AdminUI/wwwroot/package.json
@@ -1,5 +1,6 @@
 {
   "name": "restate-adminui",
+  "description": "Administrative UI for REstate",
   "version": "1.0.0",
   "scripts": {
     "start": "tsc && concurrently \"npm run tsc:w\" \"npm run lite\" ",
