--- a/src/REstate.Service.AdminUI/REstate.Services.AdminUI.csproj
+++ b/src/REstate.Service.AdminUI/REstate.Services.AdminUI.csproj
@@ -144,6 +144,7 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Bootstrapper.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
