--- a/src/REstate.Service.AdminUI/wwwroot/package.json
+++ b/src/REstate.Service.AdminUI/wwwroot/package.json
@@ -12,23 +12,33 @@
   },
   "license": "MIT",
   "dependencies": {
+    "@angular/common": "2.0.0-rc.1",
+    "@angular/compiler": "2.0.0-rc.1",
+    "@angular/core": "2.0.0-rc.1",
+    "@angular/http": "2.0.0-rc.1",
+    "@angular/platform-browser": "2.0.0-rc.1",
+    "@angular/platform-browser-dynamic": "2.0.0-rc.1",
+    "@angular/router": "2.0.0-rc.1",
+    "@angular/router-deprecated": "2.0.0-rc.1",
+    "@angular/upgrade": "2.0.0-rc.1",
     "ace-builds": "^1.2.2",
-    "angular2": "2.0.0-beta.15",
-    "bootstrap": "3.3.6",
+    "angular2-in-memory-web-api": "0.0.7",
+    "bootstrap": "^3.3.6",
     "es6-shim": "^0.35.0",
     "jquery": "^2.2.3",
     "json-editor": "^0.7.25",
     "mathjs": "^3.2.0",
-    "reflect-metadata": "0.1.2",
-    "rxjs": "5.0.0-beta.2",
-    "systemjs": "0.19.26",
+    "ng2-bs3-modal": "^0.6.0",
+    "reflect-metadata": "^0.1.3",
+    "rxjs": "5.0.0-beta.6",
+    "systemjs": "0.19.27",
     "viz.js": "^1.3.0",
-    "zone.js": "0.6.10"
+    "zone.js": "^0.6.12"
   },
   "devDependencies": {
     "concurrently": "^2.0.0",
     "lite-server": "^2.2.0",
     "typescript": "^1.8.10",
-    "typings": "^0.7.12"
+    "typings": "^0.8.1"
   }
 }
